deploy/openshift/file-upload-service.yml
# Deploy with:
#   oc new-project python-samples    (if needed)
#   oc apply -f <filename>.yml
#   oc start-build <app-name>        (trigger the first build)
#   oc get builds                    (watch build progress)
#   oc get route <app-name>          (get the URL)
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-upload-service
  labels:
    app: file-upload-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-upload-service
  template:
    metadata:
      labels:
        app: file-upload-service
      annotations:
        image.openshift.io/triggers: >-
          [{"from":{"kind":"ImageStreamTag","name":"file-upload-service:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"file-upload-service\")].image"}]
    spec:
      containers:
        - name: file-upload-service
          image: image-registry.openshift-image-registry.svc:5000/python-samples/file-upload-service:latest
          ports:
            - name: http
              containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: file-upload-service
  labels:
    app: file-upload-service
spec:
  type: ClusterIP
  selector:
    app: file-upload-service
  ports:
    - name: http
      port: 5000
      targetPort: http
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: file-upload-service
  labels:
    app: file-upload-service
spec:
  to:
    kind: Service
    name: file-upload-service
    weight: 100
  port:
    targetPort: http
