deploy/openshift/logging-monitoring-app.yml
# Deploy with:
#   oc new-project python-samples    (if needed)
#   oc apply -f <filename>.yml
#   oc start-build <app-name>        (trigger the first build)
#   oc get builds                    (watch build progress)
#   oc get route <app-name>          (get the URL)
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logging-monitoring-app
  labels:
    app: logging-monitoring-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logging-monitoring-app
  template:
    metadata:
      labels:
        app: logging-monitoring-app
      annotations:
        image.openshift.io/triggers: >-
          [{"from":{"kind":"ImageStreamTag","name":"logging-monitoring-app:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"logging-monitoring-app\")].image"}]
    spec:
      containers:
        - name: logging-monitoring-app
          image: image-registry.openshift-image-registry.svc:5000/python-samples/logging-monitoring-app:latest
          ports:
            - name: http
              containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: logging-monitoring-app
  labels:
    app: logging-monitoring-app
spec:
  type: ClusterIP
  selector:
    app: logging-monitoring-app
  ports:
    - name: http
      port: 5000
      targetPort: http
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: logging-monitoring-app
  labels:
    app: logging-monitoring-app
spec:
  to:
    kind: Service
    name: logging-monitoring-app
    weight: 100
  port:
    targetPort: http
